<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp">

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="invisible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center_horizontal"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="Minggu, 01 Dec 2019" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="@android:color/black" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="@dimen/activity_vertical_margin"
                android:weightSum="4"
                tools:ignore="NestedWeights">

                <LinearLayout style="@style/LinearContentPrayerTimeStyle">

                    <TextView
                        style="@style/TextContentPrayerTimeStyle"
                        android:text="@string/subuh" />

                    <TextView
                        android:id="@+id/tv_subuh_time"
                        style="@style/TextContentPrayerTimeStyle"
                        tools:text="05:03" />

                </LinearLayout>

                <LinearLayout style="@style/LinearContentPrayerTimeStyle">

                    <TextView
                        style="@style/TextContentPrayerTimeStyle"
                        android:text="@string/terbit" />

                    <TextView
                        android:id="@+id/tv_terbit_time"
                        style="@style/TextContentPrayerTimeStyle"
                        tools:text="06:21" />

                </LinearLayout>

                <LinearLayout style="@style/LinearContentPrayerTimeStyle">

                    <TextView
                        style="@style/TextContentPrayerTimeStyle"
                        android:text="@string/dhuha" />

                    <TextView
                        android:id="@+id/tv_dhuha_time"
                        style="@style/TextContentPrayerTimeStyle"
                        tools:text="06:49" />

                </LinearLayout>

                <LinearLayout style="@style/LinearContentPrayerTimeStyle">

                    <TextView
                        style="@style/TextContentPrayerTimeStyle"
                        android:text="@string/zuhur" />

                    <TextView
                        android:id="@+id/tv_zuhur_time"
                        style="@style/TextContentPrayerTimeStyle"
                        tools:text="12:24" />

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@android:color/black" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="@dimen/activity_vertical_margin"
                android:weightSum="4">

                <LinearLayout style="@style/LinearContentPrayerTimeStyle">

                    <TextView
                        style="@style/TextContentPrayerTimeStyle"
                        android:text="@string/asar" />

                    <TextView
                        android:id="@+id/tv_asar_time"
                        style="@style/TextContentPrayerTimeStyle"
                        tools:text="15:47" />

                </LinearLayout>

                <LinearLayout style="@style/LinearContentPrayerTimeStyle">

                    <TextView
                        style="@style/TextContentPrayerTimeStyle"
                        android:text="@string/magrib" />

                    <TextView
                        android:id="@+id/tv_magrib_time"
                        style="@style/TextContentPrayerTimeStyle"
                        tools:text="18:22" />

                </LinearLayout>

                <LinearLayout style="@style/LinearContentPrayerTimeStyle">

                    <TextView
                        style="@style/TextContentPrayerTimeStyle"
                        android:text="@string/isya" />

                    <TextView
                        android:id="@+id/tv_isya_time"
                        style="@style/TextContentPrayerTimeStyle"
                        tools:text="19:35" />

                </LinearLayout>

                <LinearLayout style="@style/LinearContentPrayerTimeStyle">

                    <TextView
                        style="@style/TextContentPrayerTimeStyle"
                        android:text="@string/imsak" />

                    <TextView
                        android:id="@+id/tv_imsak_time"
                        style="@style/TextContentPrayerTimeStyle"
                        tools:text="04:53" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>