<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main"
    tools:context=".activities.PrayerTimesDetailsActivity">

    <ImageView
        android:id="@+id/img_main_header"
        android:layout_width="0dp"
        android:layout_height="202.2dp"
        android:contentDescription="@string/main_header_description"
        android:scaleType="fitXY"
        android:src="@drawable/bg_main_header"
        app:layout_constraintBottom_toTopOf="@id/tv_city_name_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_city_name_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/ll_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_main_header"
        tools:text="Jadwal Sholat Aceh Barat Daya" />

    <LinearLayout
        android:id="@+id/ll_content"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:background="@drawable/bg_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_vertical_margin"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_city_name_title">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="21dp"
            app:cardElevation="5dp"
            app:contentPadding="@dimen/activity_vertical_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="4">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    tools:ignore="UselessParent">

                    <TextView
                        android:id="@+id/tv_date_today"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:gravity="center_horizontal"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        tools:text="Minggu, 01 Dec 2019" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_alignParentBottom="true"
                        android:background="@android:color/black" />

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:padding="@dimen/activity_vertical_margin"
                        android:weightSum="4"
                        tools:ignore="NestedWeights">

                        <LinearLayout style="@style/LinearContentPrayerTimeStyle">

                            <TextView
                                style="@style/TextContentPrayerTimeStyle"
                                android:text="@string/subuh" />

                            <TextView
                                android:id="@+id/tv_subuh_time"
                                style="@style/TextContentPrayerTimeStyle"
                                tools:text="05:03" />

                        </LinearLayout>

                        <LinearLayout style="@style/LinearContentPrayerTimeStyle">

                            <TextView
                                style="@style/TextContentPrayerTimeStyle"
                                android:text="@string/terbit" />

                            <TextView
                                android:id="@+id/tv_terbit_time"
                                style="@style/TextContentPrayerTimeStyle"
                                tools:text="06:21" />

                        </LinearLayout>

                        <LinearLayout style="@style/LinearContentPrayerTimeStyle">

                            <TextView
                                style="@style/TextContentPrayerTimeStyle"
                                android:text="@string/dhuha" />

                            <TextView
                                android:id="@+id/tv_dhuha_time"
                                style="@style/TextContentPrayerTimeStyle"
                                tools:text="06:49" />

                        </LinearLayout>

                        <LinearLayout style="@style/LinearContentPrayerTimeStyle">

                            <TextView
                                style="@style/TextContentPrayerTimeStyle"
                                android:text="@string/zuhur" />

                            <TextView
                                android:id="@+id/tv_zuhur_time"
                                style="@style/TextContentPrayerTimeStyle"
                                tools:text="12:24" />

                        </LinearLayout>

                    </LinearLayout>

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:background="@android:color/black" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:padding="@dimen/activity_vertical_margin"
                        android:weightSum="4">

                        <LinearLayout style="@style/LinearContentPrayerTimeStyle">

                            <TextView
                                style="@style/TextContentPrayerTimeStyle"
                                android:text="@string/asar" />

                            <TextView
                                android:id="@+id/tv_asar_time"
                                style="@style/TextContentPrayerTimeStyle"
                                tools:text="15:47" />

                        </LinearLayout>

                        <LinearLayout style="@style/LinearContentPrayerTimeStyle">

                            <TextView
                                style="@style/TextContentPrayerTimeStyle"
                                android:text="@string/magrib" />

                            <TextView
                                android:id="@+id/tv_magrib_time"
                                style="@style/TextContentPrayerTimeStyle"
                                tools:text="18:22" />

                        </LinearLayout>

                        <LinearLayout style="@style/LinearContentPrayerTimeStyle">

                            <TextView
                                style="@style/TextContentPrayerTimeStyle"
                                android:text="@string/isya" />

                            <TextView
                                android:id="@+id/tv_isya_time"
                                style="@style/TextContentPrayerTimeStyle"
                                tools:text="19:35" />

                        </LinearLayout>

                        <LinearLayout style="@style/LinearContentPrayerTimeStyle">

                            <TextView
                                style="@style/TextContentPrayerTimeStyle"
                                android:text="@string/imsak" />

                            <TextView
                                android:id="@+id/tv_imsak_time"
                                style="@style/TextContentPrayerTimeStyle"
                                tools:text="04:53" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:weightSum="3"
                tools:ignore="NestedWeights">

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <ImageView
                        style="@style/ImageBackgroundNextPrayerTimeStyle"
                        android:src="@drawable/bg_item_one"
                        tools:ignore="ContentDescription" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#50552886" />

                    <TextView
                        android:id="@+id/tv_next_date_two"
                        style="@style/TextNextDatePrayerTimeStyle"
                        tools:text="2019-12-02" />

                </FrameLayout>

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <ImageView
                        style="@style/ImageBackgroundNextPrayerTimeStyle"
                        android:src="@drawable/bg_item_two"
                        tools:ignore="ContentDescription" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#50B91B3D" />

                    <TextView
                        android:id="@+id/tv_next_date_three"
                        style="@style/TextNextDatePrayerTimeStyle"
                        tools:text="2019-12-03" />

                </FrameLayout>

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <ImageView
                        style="@style/ImageBackgroundNextPrayerTimeStyle"
                        android:src="@drawable/bg_item_three"
                        tools:ignore="ContentDescription" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#50B3D712" />

                    <TextView
                        android:id="@+id/tv_next_date_four"
                        style="@style/TextNextDatePrayerTimeStyle"
                        tools:text="2019-12-04" />

                </FrameLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:weightSum="3">

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <ImageView
                        style="@style/ImageBackgroundNextPrayerTimeStyle"
                        android:src="@drawable/bg_item_four"
                        tools:ignore="ContentDescription" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#5018BB49" />

                    <TextView
                        android:id="@+id/tv_next_date_five"
                        style="@style/TextNextDatePrayerTimeStyle"
                        tools:text="2019-12-05" />

                </FrameLayout>

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <ImageView
                        style="@style/ImageBackgroundNextPrayerTimeStyle"
                        android:src="@drawable/bg_item_five"
                        tools:ignore="ContentDescription" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#50009688" />

                    <TextView
                        android:id="@+id/tv_next_date_six"
                        style="@style/TextNextDatePrayerTimeStyle"
                        tools:text="2019-12-06" />

                </FrameLayout>

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <ImageView
                        style="@style/ImageBackgroundNextPrayerTimeStyle"
                        android:src="@drawable/bg_item_six"
                        tools:ignore="ContentDescription" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#503434C3" />

                    <TextView
                        android:id="@+id/tv_next_date_seven"
                        style="@style/TextNextDatePrayerTimeStyle"
                        tools:text="2019-12-07" />

                </FrameLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>